# NodeEditorSample

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini  vcpkg.json
core/: CMakeLists.txt
core/src/: CppFunctions.cpp  CppFunctions.h  FunctionNode.cpp  FunctionNode.h  Graph.h  LuaScriptBuilder.cpp  LuaScriptBuilder.h  Node.h
editor/: CMakeLists.txt
editor/src/: Application.cpp  Application.h  LuaScriptBuilder.cpp  LuaScriptBuilder.h  Main.cpp  NodeEditor.cpp  NodeEditor.h
resources/: sample.lua
resources/data/: README.md
resources/gui/: basic_interaction.json  simple.json
src/: Application.cpp  Application.h  Graph.h  Main.cpp  NodeEditor.cpp  NodeEditor.h
viewer/: CMakeLists.txt
viewer/src/: Main.cpp
